  * Improved Abaqus reader support
  * Improved UCDIO writer support
  * Output only a subset of variables from EquationSystems
  * Run-time floating point exception trapping via --enable-fpe
  * Refreshed packaged METIS and ParMETIS to latest versions
  * PETSc-3.3, SLEPc 3.3 support
  * Trilinos-11 support
  * Mac OSX 10.8 "Mountain Lion" fixes
  * New Examples:
     o ??
     o ??
  

0.7.2 -> 0.7.3
  * Templated FunctionBase and subclass functors
  * Functor-based versions of more system APIs
  * Integrated function parser based functor
  * More flexible PetscMatrix responds to -mat_type
  * Elem::close_to_point() method for contact problems
  * Heterogenous constraint equation support
  * Dirichlet constraint equation support
  * More methods are ParallelMesh-compatible
  * Mesh extrusion generation
  * UniformRefinement error estimates for more adjoint options
  * Element truth table written in ExodusII output
  * GetPot detection of overridden variables
  * Reorganized examples by category
  * C++11 compatibility fixes
  * Many assorted bug fixes

0.7.1 -> 0.7.2
  * Discontinuous hierarchic FE basis
  * PatchRecoveryErrorEstimator patch reuse option
  * New partitioning-aware Patch construction option
  * More efficient adjoint solves with PETSc
  * New projection example utility
  * Bare System objects are now useful for efficient utilities
  * Many Exodus/Nemesis output improvements
  * BoundaryInfo::sync() is now AMR- and ParallelMesh-compatible
  * More code is now ParallelMesh-compatible
  * More flexible Parallel:: APIs
  * Elem:: utilities for semi-structured grids
  * NodeConstraints calculations for moving mesh users
  * Stack trace output on any uncaught exception
  * Corrected non-standard C++ in FE class specializations
  * Multithreaded FEMSystem assembly functions
  * Assorted efficiency improvements
  * Various Trilinos, Tetgen, Triangle interface improvements
  * Compatibility with newer third-party packages, compilers