@@ -24,8 +24,10 @@
   * Trilinos-11 support
   * Mac OSX 10.8 "Mountain Lion" fixes
   * New Examples:
-     o ??
-     o ??
+     o systems_of_equations 4, 5, 6: 2D and 3D linear elasticity
+     o reduced_basis_ex5: 3D linear elasticity with the Reduced Basis method
+     o reduced_basis_ex6: Empirical interpolation method for a geometrically parametrized domain in 3D
+     o reduced_basis_ex7: Complex-valued Reduced Basis problem modeling an acoustic horn
   
 
 0.7.2 -> 0.7.3
